--- a/vercel.json
+++ b/vercel.json
@@ -11,14 +11,22 @@
       "config": { "distDir": "dist" }
     }
   ],
+  // --- GANTI SELURUH BAGIAN "routes" DENGAN INI ---
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/backend/server.js"
+      "dest": "backend/server.js"
+    },
+    {
+      "src": "/assets/(.*)",
+      "headers": {
+        "cache-control": "s-maxage=31536000, immutable"
+      },
+      "dest": "/frontend/dist/assets/$1"
     },
     {
       "src": "/(.*)",
-      "dest": "/frontend/dist/$1"
+      "dest": "/frontend/dist/index.html"
     }
   ]
 }
