--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "pos-fnb-monorepo-root",
   "private": true,
   "scripts": {
-    "dev": "echo \"Run dev in frontend and backend folders separately\"",
     "build": "cd frontend && npm run build",
-    "install-all": "cd backend && npm install && cd ../frontend && npm install"
+    "install-all": "npm --prefix backend install && npm --prefix frontend install"
   }
 }
