Final fix: Correct Vercel output routes

--- a/vercel.json
+++ b/vercel.json
@@ -18,12 +18,11 @@
     },
     {
       "src": "/assets/(.*)",
-      "headers": { "cache-control": "s-maxage=31536000, immutable" },
-      "dest": "/frontend/dist/assets/$1"
+      "dest": "/assets/$1"
     },
     {
       "src": "/(.*)",
-      "dest": "/frontend/dist/index.html"
+      "dest": "/index.html"
     }
   ]
 }
